--- a/templates/post.html
+++ b/templates/post.html
@@ -1,23 +1,9 @@
-<!-- post.html -->
-{% extends 'base.html' %}
+{% extends "base.html" %}
+
 {% block content %}
-<h2>{{ post[1] }}</h2>
-<p><small>{{ post[4] }} | {{ post[6] }}</small></p>
-{% if post[5] %}
-<img src="{{ url_for('uploaded_file', filename=post[5]) }}" class="img-fluid mb-3" alt="Media">
-{% endif %}
-<p>{{ post[3] }}</p>
-<hr>
-<h4>Comments</h4>
-<form method="post">
-  <input name="name" class="form-control mb-2" placeholder="Your name" required>
-  <textarea name="comment" class="form-control mb-2" placeholder="Comment" required></textarea>
-  <button class="btn btn-primary btn-sm">Post Comment</button>
-</form>
-{% for c in comments %}
-<div class="border p-2 mt-2">
-  <strong>{{ c[0] }}</strong> <small class="text-muted">{{ c[2] }}</small>
-  <p>{{ c[1] }}</p>
-</div>
-{% endfor %}
+    <article>
+        <h1>{{ post.title }}</h1>
+        <p>{{ post.summary }}</p>
+        <p><em>Views: {{ post.views }}</em></p>
+    </article>
 {% endblock %}
